[plugins] tags/vendors are sorted sets; lambda replaced with an abstract method
GitOrigin-RevId: 7df71f3c61076c5697c08e2f65c797270de5c046